Align AsyncContextImpl with 8.5.x
Spacing, improved i18n, simplify code, remove anonymous inner classes,
obtain InstanceManager directly from the Context